--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -46,6 +46,11 @@
 			height: calc(100vh - 49px);
 			width: 100%;
 			z-index: 49;
+			left: -100%;
+			transition: .3s linear;
+			.open &{
+				left: 0;
+			}
 
 		}
 		&__container{
@@ -53,6 +58,9 @@
 			flex-direction: column;
 			gap: 40px;
 			justify-content: space-between;
+			@media screen and (max-width:1023.9px) {
+				align-items: flex-start;
+			}
 			ul{
 				display: flex;
 				flex-direction: column;
@@ -89,5 +97,27 @@
 	position: relative;
 	@media screen and (min-width:1024px) {
 		display: none;
+	}
+	span{
+		width: 26px;
+		height: 2px;
+		border-radius: 500px;
+		background-color: $white;
+		transition: .3s linear;
+		position: absolute;
+		left: 11px;
+		&:nth-of-type(1){
+			top:19px;
+			.open &{
+				transform: translate(0px, 2px) rotate(45deg);
+			}
+		}
+		&:nth-of-type(2){
+			bottom: 19px;
+			.open &{
+			transform: translate(-2px, -6px) rotate(-45deg);
+		}
+		}
+		
 	}
 }
