--- a/assets/style/_services.scss
+++ b/assets/style/_services.scss
@@ -93,6 +93,9 @@
 				}
 		}
 		&__content{
+			margin-bottom: 64px;
+
+			&__wrap{
 			display: flex;
 			flex-direction: column;
 			gap: 24px;
@@ -103,17 +106,17 @@
 				grid-template-columns: repeat(2, 1fr);
 			}
 			@media screen and (min-width:1024px) {
-				grid-template-columns: repeat(2, 1fr);
+				grid-template-columns: repeat(3, 1fr);
+			}
 			}
 		}
 		&__item{
 			display: flex;
 			flex-grow:1;
-			max-height: 480px;
-			min-height: 480px;
+			// min-height: 480px;
 			width: 100%;
-			aspect-ratio: 330 / 480;
 			position: relative;
+			height: auto;
 			&__count{
 				background-color: roots.$primary;
 				color: roots.$white;
@@ -138,8 +141,73 @@
 				left: 20px;
 				z-index: 0;
 				border-radius: 20px 48px 20px 20px;
-				
+				max-height: 270px;
+				width: calc(100% - 40px);
+				@media screen and (min-width:768px) {
+					border-radius: 18px 64px 18px 18px;
+				}				
+				img{
+					max-width: 100%;
+					max-height: inherit;
+					width: 100%;
+					height: 100%;
+					border-radius: inherit;
+					object-fit: cover;
+				}
 
 			}
+			&__content{
+				margin-top: 140px;
+				flex-grow: 1;
+				padding: 154px 24px 24px 24px;
+				background-color: roots.$black-800;
+				border-radius: 24px 64px 24px 24px;
+				color: roots.$white;
+				display:flex;
+				flex-direction: column;
+				gap: 12px;
+				h3{
+					font-size: 22px;
+					font-style: normal;
+					font-weight: 700;
+					line-height: 140%;
+					@media screen and (min-width:768px) {
+						font-size: 25px;;
+					}
+				}
+				p{
+					font-size: 16px;
+					font-style: normal;
+					font-weight: 400;
+					line-height: 150%; 
+					color: roots.$white-750;
+				}
+			}
 		}
+	&__contacts{
+		display: flex;
+		justify-content: space-between;
+		color: roots.$white;
+		flex-direction: column;
+		@media screen and (min-width:1024px) {
+				flex-direction: row;
+			}
+		& .hero__content__info{
+			@media screen and (min-width:1024px) {
+				width: 70%;
+			}
+		}
+		&__wrap{
+			display: flex;
+			flex-direction: column;
+			gap: 32px;
+		
+				@media screen and (min-width:10248px) {
+				width: 26%;
+			}
+		}
+		& .btns{
+
+		}
+	}
 }
