--- a/assets/style/roots/_root.scss
+++ b/assets/style/roots/_root.scss
@@ -303,3 +303,26 @@ body{
 		height: 100%;
 	}
 }
+.socials{
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	a{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-radius: 500px;
+		border: 1px solid rgba(255, 255, 255, 0.40);
+		aspect-ratio: 1;
+		max-width: 64px;
+		max-height: 64px;
+		padding: 13px;
+		width: 100%;
+		height: 100%;
+		transition: .3s linear;
+		&:hover{
+			background-color: $primary;
+		}
+
+	}
+}
