--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -379,6 +379,29 @@ body {
   height: 100%;
 }
 
+.socials {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.socials a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 500px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  aspect-ratio: 1;
+  max-width: 64px;
+  max-height: 64px;
+  padding: 13px;
+  width: 100%;
+  height: 100%;
+  transition: 0.3s linear;
+}
+.socials a:hover {
+  background-color: #F56200;
+}
+
 .header {
   position: sticky;
   top: 0;
@@ -940,33 +963,34 @@ body {
   stroke: #F56200;
 }
 .services__content {
+  margin-bottom: 64px;
+}
+.services__content__wrap {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 @media screen and (min-width: 768px) {
-  .services__content {
+  .services__content__wrap {
     display: grid;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px) {
-  .services__content {
+  .services__content__wrap {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media screen and (min-width: 1024px) {
-  .services__content {
-    grid-template-columns: repeat(2, 1fr);
+  .services__content__wrap {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 .services__item {
   display: flex;
   flex-grow: 1;
-  max-height: 480px;
-  min-height: 480px;
   width: 100%;
-  aspect-ratio: 330/480;
   position: relative;
+  height: auto;
 }
 .services__item__count {
   background-color: #F56200;
@@ -991,4 +1015,75 @@ body {
   left: 20px;
   z-index: 0;
   border-radius: 20px 48px 20px 20px;
+  max-height: 270px;
+  width: calc(100% - 40px);
+}
+@media screen and (min-width: 768px) {
+  .services__item__img {
+    border-radius: 18px 64px 18px 18px;
+  }
+}
+.services__item__img img {
+  max-width: 100%;
+  max-height: inherit;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.services__item__content {
+  margin-top: 140px;
+  flex-grow: 1;
+  padding: 154px 24px 24px 24px;
+  background-color: #242424;
+  border-radius: 24px 64px 24px 24px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.services__item__content h3 {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 140%;
+}
+@media screen and (min-width: 768px) {
+  .services__item__content h3 {
+    font-size: 25px;
+  }
+}
+.services__item__content p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  color: #E1E1E1;
+}
+.services__contacts {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  flex-direction: column;
+}
+@media screen and (min-width: 1024px) {
+  .services__contacts {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .services__contacts .hero__content__info {
+    width: 70%;
+  }
+}
+.services__contacts__wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+@media screen and (min-width: 10248px) {
+  .services__contacts__wrap {
+    width: 26%;
+  }
 }/*# sourceMappingURL=style.css.map */
