--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -3,3 +3,9 @@
 @use './hero';
 @use './about';
 @use './services';
+@use './advantages';
+@use './work';
+@use './area';
+@use './contact';
+@use './gallery';
+@use './faq';
