--- a/assets/style/_gallery.scss
+++ b/assets/style/_gallery.scss
@@ -46,6 +46,10 @@
 		@media screen and (min-width:768px) {
 			padding: 64px 0 40px;
 		}
+		@media screen and (max-width:1023.9px) {
+			margin-left: -20px;
+			margin-right: -20px;
+		}
 		&__item{
 			display: flex;
 			align-items: center;
