--- a/assets/style/roots/_root.scss
+++ b/assets/style/roots/_root.scss
@@ -348,3 +348,87 @@ body{
 
 	}
 }
+
+.breadcrumbs{
+	padding:40px 0 70px 0px;
+	position: relative;
+
+	@media screen and (min-width:768px) {
+	padding: 40px 0 100px 0px;
+	}
+
+	&__container{
+		display: flex;
+		flex-direction: column;
+		gap: 14px;
+		align-items: flex-start;
+	}
+	&__links{
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		font-size: 14px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: 160%;
+		color: $text-color;			
+		a{
+			transition: .3s linear;
+			&:hover{
+				color: $primary;
+			}		
+		}
+		
+	}
+}
+.article{
+	display: flex;
+	flex-direction: column;
+	gap: 26px;
+	@media screen and (min-width:768px) {
+		gap: 32px;
+	}
+	*{
+		color: $text-color;
+		a,  ul, ol, span{
+			font-size: 18px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 160%;
+		}
+		a, strong{
+			font-weight: 800;
+		}
+		a{
+			transition: .3s linear;
+			&:hover{
+				color: $primary;
+			}	
+		}
+		p{
+			font-size: 20px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 160%;
+		}
+	}
+	
+	ul{
+		display: flex;
+		flex-direction: column;
+		gap: 7px;
+		li{
+			position: relative;
+			padding-left: 42px;
+			&:before{
+				content: '';
+				position: absolute;
+				top: 10px;
+				left: 0;
+				width: 17px;
+				height: 12px;
+				background: url(../images/content-list-arrow.svg) center center / cover no-repeat; 
+			}
+		}
+	}
+}
