--- a/assets/style/_faq.scss
+++ b/assets/style/_faq.scss
@@ -58,7 +58,9 @@
 		gap: 20px;
 	}
 }
-
+.faq__item.active{
+	filter: drop-shadow(0 0 5.781px rgba(245, 98, 0, 0.13)) drop-shadow(0 0 16.25px rgba(245, 98, 0, 0.20)) drop-shadow(0 0 43.594px rgba(245, 98, 0, 0.27)) drop-shadow(0 0 48px rgba(245, 98, 0, 0.20));
+}
 .faq h2:not(.faq__item__top h2){
 	margin-bottom: 32px;
 	@media screen and (min-width:768px) {
