--- a/assets/style/_about.scss
+++ b/assets/style/_about.scss
@@ -24,10 +24,10 @@
 		line-height: 150%; 
 		color: roots.$black-600;		
 		@media screen and (min-width:1024px) {
-			width: 48%;
+			width: 46%;
 		}
 		@media screen and (min-width:768px) {
-			font-size: 16px;
+			font-size: 18px;
 		}
 		hr{
 			opacity: 0.2;
@@ -76,8 +76,11 @@
 	&__image{
 		position: relative;
 		overflow: hidden;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		@media screen and (min-width:1024px) {
-			width: 43%;
+			width: 48%;
 		}
 		img{
 			max-width: 100%;
@@ -87,16 +90,19 @@
 			position: relative;
 			z-index: 1;
 			object-fit: cover;
+			max-width: 570px;
+		margin: 0 auto;
 		}
 		&-anim{
 			width: calc(100% - 14px);
 			position: absolute;
-			height: min-content;
 			bottom: 0;
 			aspect-ratio: 1;
 			border-radius: 50%;
 			background-color: roots.$primary;
 			z-index: 0;
+			max-height: 547px;
+			max-width: 547px;
 		&:after{
 			content: '';
 			width: 100%;
@@ -126,6 +132,7 @@
 		left: 50%;
 		bottom: 78px;
 		transform: translateX(-50%);
+		z-index: 2;
 		@media screen and (min-width:768px) {
 			padding: 20px;
 			bottom: 55px;
@@ -144,6 +151,9 @@
 			&:nth-last-of-type(1){
 				font-size: 14px;
 				color: rgba(255, 255, 255, 0.75);
+				font-style: normal;
+				font-weight: 400;
+				line-height: 120%;
 				@media screen and (min-width:768px) {
 					font-size: 15px;
 				}
