--- a/assets/style/_area.scss
+++ b/assets/style/_area.scss
@@ -91,7 +91,7 @@
 			display: flex;
 			flex-direction: column;
 			gap: 16px;
-		
+			margin-bottom: 0;
 			@media screen and (min-width:768px) {
 				display: grid;
 				grid-template-columns: repeat(2, 1fr);
