--- a/assets/style/_contact.scss
+++ b/assets/style/_contact.scss
@@ -14,6 +14,8 @@
 		margin-bottom: 64px;
 	}
 	&__blocks{
+			display: flex;
+				flex-direction: column;
 		@media screen and (min-width:1024px) {
 			width: 36%;
 		}
@@ -32,6 +34,12 @@
 		border-radius: 20px;
 		background: roots.$white;
 		box-shadow: 0 0 48px 0 rgba(0, 0, 0, 0.08);
+		a{
+			font-size: 20px;
+				font-style: normal;
+				font-weight: 700;
+				line-height: 140%; 
+		}
 		& *{
 			color: roots.$text-color;
 		}
@@ -104,6 +112,7 @@
 	& .socials a{
 		max-width: 48px;
 		max-height: 48px;
+		min-width: 48px;
 	}
 	&-items{
 	a{
