--- a/assets/style/_faq.scss
+++ b/assets/style/_faq.scss
@@ -143,7 +143,7 @@
 }
 
 .faq__item-bottom{
-	border-radius: 0 0 24px 24px;
+	border-radius: 0 0 16px 16px;
 	border: 1px solid $primary;
 	border-top-color: transparent;
 	background: $white;
@@ -204,6 +204,8 @@
 			z-index: 2;
 			@media screen and (min-width:768px) {
 				max-width: 367px;
+				bottom: 20px;
+			left: 20px;
 			}
 			div{
 				span{
@@ -216,8 +218,7 @@
 					}
 				}
 				p{
-					font-size: 14px;
-					
+					font-size: 14px;					
 					font-style: normal;
 					font-weight: 500;
 					line-height: 160%;
