--- a/assets/style/_hero.scss
+++ b/assets/style/_hero.scss
@@ -27,8 +27,10 @@
 		}
 		& .btns{
 			justify-content: center;
+			gap: 32px;
 			@media screen and (min-width:1024px) {
 				justify-content: flex-end;
+				gap: 32px;
 			}
 		}
 		&__info{
@@ -73,9 +75,23 @@
 					line-height: 160%;
 				@media screen and (min-width:768px) {
 					padding: 24px 20px;
+					border-radius: 0 32px 32px 32px;
 				}
 				@media screen and (min-width:1024px) {
 					width: calc(100% - 90px);
+				}
+				span{
+					
+					font-size: 14px;
+					font-style: normal;
+					font-weight: 800;
+					line-height: 150%; /* 21px */
+					letter-spacing: 0.14px;
+					@media screen and (min-width:768px) {
+						font-size: 20px;
+					letter-spacing: 0.2px;
+					}
+
 				}
 					div{
 							display: flex;
@@ -103,8 +119,10 @@
 		gap: 11px;
 		flex-wrap: wrap;
 		width: fit-content;
+		
 		@media screen and (min-width:768px) {
 			gap: 16px;
+			min-height: 70px;
 		}
 		@media screen and (min-width:1024px) {
 			width: 36%;
