--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -216,6 +216,7 @@ body {
   transition: padding-right 0.3s linear, width 0.3s linear;
   will-change: padding-right;
   box-shadow: 0 0 100px 0 rgba(245, 98, 0, 0.4), 0 0 43.594px 0 rgba(245, 98, 0, 0.27), 0 0 16.25px 0 rgba(245, 98, 0, 0.2), 0 0 5.781px 0 rgba(245, 98, 0, 0.13);
+  text-transform: uppercase;
 }
 .btn-primary:after {
   content: "";
@@ -308,11 +309,15 @@ body {
   font-style: normal;
   font-weight: 800;
   line-height: normal;
+  transition: 0.3s linear;
 }
 @media screen and (min-width: 768px) {
   .btn-row a {
     font-size: 24px;
   }
+}
+.btn-row a:hover {
+  color: #F56200;
 }
 .btn-row span {
   color: #4be46b;
@@ -368,7 +373,7 @@ body {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
   100% {
     transform: scale(1);
@@ -419,6 +424,7 @@ body {
   width: 100%;
   height: 100%;
   transition: 0.3s linear;
+  min-width: 64px;
 }
 .socials a:hover {
   background-color: #F56200;
@@ -599,7 +605,14 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 64px;
   }
+}
+.header__bottom__container ul li {
+  transition: 0.3s linear;
+}
+.header__bottom__container ul li:hover {
+  color: #F56200;
 }
 .header__bottom__container .btns {
   flex-direction: column;
@@ -637,7 +650,7 @@ body {
   top: 19px;
 }
 .open .burger span:nth-of-type(1) {
-  transform: translate(0px, 2px) rotate(45deg);
+  transform: translate(-1px, 2px) rotate(45deg);
 }
 .burger span:nth-of-type(2) {
   bottom: 19px;
@@ -682,10 +695,12 @@ body {
 }
 .hero__content .btns {
   justify-content: center;
+  gap: 32px;
 }
 @media screen and (min-width: 1024px) {
   .hero__content .btns {
     justify-content: flex-end;
+    gap: 32px;
   }
 }
 .hero__content__info {
@@ -735,11 +750,25 @@ body {
 @media screen and (min-width: 768px) {
   .hero__content__info-text {
     padding: 24px 20px;
+    border-radius: 0 32px 32px 32px;
   }
 }
 @media screen and (min-width: 1024px) {
   .hero__content__info-text {
     width: calc(100% - 90px);
+  }
+}
+.hero__content__info-text span {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 150%; /* 21px */
+  letter-spacing: 0.14px;
+}
+@media screen and (min-width: 768px) {
+  .hero__content__info-text span {
+    font-size: 20px;
+    letter-spacing: 0.2px;
   }
 }
 .hero__content__info-text div {
@@ -769,6 +798,7 @@ body {
 @media screen and (min-width: 768px) {
   .hero__reviews {
     gap: 16px;
+    min-height: 70px;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -829,12 +859,12 @@ body {
 }
 @media screen and (min-width: 1024px) {
   .about__content {
-    width: 48%;
+    width: 46%;
   }
 }
 @media screen and (min-width: 768px) {
   .about__content {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 .about__content hr {
@@ -885,10 +915,13 @@ body {
 .about__image {
   position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media screen and (min-width: 1024px) {
   .about__image {
-    width: 43%;
+    width: 48%;
   }
 }
 .about__image img {
@@ -900,17 +933,19 @@ body {
   z-index: 1;
   -o-object-fit: cover;
      object-fit: cover;
+  max-width: 570px;
+  margin: 0 auto;
 }
 .about__image-anim {
   width: calc(100% - 14px);
   position: absolute;
-  height: -moz-min-content;
-  height: min-content;
   bottom: 0;
   aspect-ratio: 1;
   border-radius: 50%;
   background-color: #F56200;
   z-index: 0;
+  max-height: 547px;
+  max-width: 547px;
 }
 .about__image-anim:after {
   content: "";
@@ -940,6 +975,7 @@ body {
   left: 50%;
   bottom: 78px;
   transform: translateX(-50%);
+  z-index: 2;
 }
 @media screen and (min-width: 768px) {
   .about__owner {
@@ -962,6 +998,9 @@ body {
 .about__owner span:nth-last-of-type(1) {
   font-size: 14px;
   color: rgba(255, 255, 255, 0.75);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
 }
 @media screen and (min-width: 768px) {
   .about__owner span:nth-last-of-type(1) {
@@ -1031,7 +1070,7 @@ body {
   gap: 32px;
   padding: 16px;
   border-radius: 14px;
-  background: #323232;
+  background-color: #323232;
   white-space: nowrap;
   color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
@@ -1039,10 +1078,11 @@ body {
   font-style: normal;
   font-weight: 700;
   line-height: 140%;
+  transition: 0.3s linear;
 }
 .services__list-item span {
   border-radius: 8px;
-  background: #989898;
+  background-color: #989898;
   width: 32px;
   height: 32px;
   display: flex;
@@ -1171,30 +1211,42 @@ body {
 }
 .services__contacts {
   display: flex;
-  justify-content: space-between;
   color: #fff;
   flex-direction: column;
+  gap: 48px;
 }
 @media screen and (min-width: 1024px) {
   .services__contacts {
     flex-direction: row;
   }
 }
+.services__contacts .hero__content__info {
+  margin-bottom: 0;
+}
 @media screen and (min-width: 1024px) {
   .services__contacts .hero__content__info {
     width: 70%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .services__contacts .hero__content__info .hero__content__info-icon {
+    max-width: 90px;
+    max-height: 90px;
   }
 }
 .services__contacts__wrap {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 @media screen and (min-width: 10248px) {
   .services__contacts__wrap {
     width: 26%;
   }
 }
+
 .advantages {
   padding: 70px 0;
   background: linear-gradient(0deg, rgba(22, 22, 22, 0.8) 0%, rgba(22, 22, 22, 0.8) 100%), url("../images/advantages.webp") center center/cover no-repeat;
@@ -1225,10 +1277,20 @@ body {
   font-weight: 600;
   line-height: 160%;
 }
+@media screen and (min-width: 1024px) {
+  .advantages__content {
+    width: 43%;
+  }
+}
 .advantages__items {
   display: flex;
   flex-direction: column;
   gap: 64px;
+}
+@media screen and (min-width: 1024px) {
+  .advantages__items {
+    width: 52%;
+  }
 }
 .advantages__item {
   display: flex;
@@ -1505,6 +1567,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
   .area__items ul {
@@ -1566,6 +1629,10 @@ body {
   width: fit-content;
   margin-bottom: 64px;
 }
+.contact__blocks {
+  display: flex;
+  flex-direction: column;
+}
 @media screen and (min-width: 1024px) {
   .contact__blocks {
     width: 36%;
@@ -1584,6 +1651,12 @@ body {
   border-radius: 20px;
   background: #fff;
   box-shadow: 0 0 48px 0 rgba(0, 0, 0, 0.08);
+}
+.contact__item.btn-row a {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 140%;
 }
 .contact__item.btn-row * {
   color: #161616;
@@ -1666,6 +1739,7 @@ body {
 .contact__socials .socials a {
   max-width: 48px;
   max-height: 48px;
+  min-width: 48px;
 }
 .contact__socials-items a {
   border-color: rgba(22, 22, 22, 0.4);
@@ -1941,7 +2015,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .gallery .gallery__list {
-    padding: 64px 0 40px;
+    padding: 40px 0 40px;
   }
 }
 @media screen and (max-width: 1023.9px) {
@@ -2015,7 +2089,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .gallery__item {
-    max-height: 290px;
+    max-height: 320px;
   }
 }
 .gallery__item img {
@@ -2179,7 +2253,7 @@ body {
 }
 
 .faq__item-bottom {
-  border-radius: 0 0 24px 24px;
+  border-radius: 0 0 16px 16px;
   border: 1px solid #F56200;
   border-top-color: transparent;
   background: #fff;
@@ -2247,6 +2321,8 @@ body {
 @media screen and (min-width: 768px) {
   .faq__img__info {
     max-width: 367px;
+    bottom: 20px;
+    left: 20px;
   }
 }
 .faq__img__info div span {
